ArgoCD/grafana/grafana-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: gr-redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
