ArgoCD/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
spec:
  type: ClusterIP
  selector:
    app: grafana-pod
  ports:
    - name: http-grafana-out
      protocol: TCP
      port: 3000
      targetPort:  https-grafana
