ArgoCD/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-gr-redirect-https@kubernetescrd
spec:
  tls:
    - secretName: grafana-secret
  rules:
    - host: REDACTED
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  grafana-svc
                port:
                  number: 3000
